--- a/package.json
+++ b/package.json
@@ -1,20 +1,15 @@
 {
-  "name": "index.html",
+  "name": "newyorktimesappsdev.github.io",
   "version": "1.0.0",
-  "main": "script.js",
   "scripts": {
-    "start": "parcel index.html",
-    "build": "parcel build index.html"
-
+    "start": "parcel index.html",      
+    "build": "parcel build index.html"     
   },
-
   "keywords": [],
-  "author": "",
+  "author": "",                       
   "license": "ISC",
-  "description": "",
+  "description": "A project for New York Times API.", 
   "devDependencies": {
-    "parcel": "^2.12.0"
+    "parcel": "^2.12.0"        
   }
-
 }
-
